# cldev

./: .gitattributes  .gitignore  CHANGELOG.md  COMMAND_OPTIMIZATION_ANALYSIS.md  CONTRIBUTING.md  CORE_MODULES_IMPLEMENTATION.md  Cargo.toml  DOCUMENTATION_CONSOLIDATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  INTERACTIVE_UI_DEMO.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  PHASE_1A_IMPLEMENTATION_SUMMARY.md  PHASE_1B_COMPLETION.md  PHASE_1B_I18N_COMPLETION.md  PHASE_1B_VERIFICATION.md  QUICKSTART.md  QUIET_MODE_FIX.md  README.ja.md  README.md  README.zh-TW.md  README.zh.md  RELEASE_READINESS_REPORT.md  SECURITY_FIXES.md  TODO.md  USER_ACCEPTANCE_TEST.md  add_i18n_keys.py  apply_i18n_bulk.sh  deny.toml  examples_config_usage.md  fix_quality_i18n.sh  test_quiet_mode.sh  todo.md  todos.md  translate_dialoguer_keys.py
.claude/: CLAUDE.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  performance_issue.md
.github/workflows/: ci.yml  cli-testing-specialist.yml  cli-testing.yml  docs.yml  nightly.yml  release.yml  security.yml
benches/: config_bench.rs  i18n_bench.rs  project_detector_bench.rs  security_bench.rs
completions/: README.md  _cldev  _cldev.ps1  cldev.bash  cldev.fish  cldev.zsh
docs/: CLI-TESTING-GUIDE.md  CLI-TESTING-SPECIALIST-GUIDE.md  DEVELOPER_GUIDE.md  DOCUMENTATION_ORGANIZATION_REPORT.md  DOC_CONSOLIDATION_PLAN.md  PERFECT_OPERATION_TEST.md  SUPPORTED_LANGUAGES.md  USER_GUIDE.md  i18n-implementation-guide.md  i18n-implementation-progress.md  i18n_quick_start.md
docs/architecture/: RUST_BEST_PRACTICES_REVIEW.md  SECURITY_IMPLEMENTATION.md  TECH_STACK_COMPARISON.md  hierarchical-config-system.md  i18n.md
docs/development/: CLI_TESTING.md  GTM_BUSINESS_STRATEGY.md  IMPLEMENTATION_PLAN.md  LEARNING_RECORD_V3_IMPLEMENTATION_PLAN.md  PHASE6_SUMMARY.md  RUNTIME_TEST_PLAN.md  TEST_QUALITY_REPORT.md  TODO-REVIEW-MR-I18N.md  TODO.md  TODO_HISTORY_ARCHIVE.md
docs/development/archive/: MANUAL_TEST_PLAN.md  README.md  VERIFICATION_CHECKLIST.md
docs/guides/: CONFIG_USAGE_EXAMPLES.md  CORE_MODULES_QUICK_REFERENCE.md  I18N_MIGRATION_GUIDE.md  VERIFICATION_CHECKLIST.md
docs/implementation/: COMMANDS_IMPLEMENTED.md  CORE_MODULES_IMPLEMENTATION.md  DEVELOPMENT_HISTORY.md
examples/: i18n_demo.rs  tfidf_demo.rs
examples/configs/: README.md
examples/configs/global/: config.toml
examples/configs/project/: config.toml
examples/configs/stacks/: backend-api.toml  data-science.toml  frontend-web.toml  mobile-app.toml  rust-cli.toml
scripts/: record-demo.sh  setup-git-hooks.sh
src/: error.rs  lib.rs  main.rs  main.rs.backup
src/cli/: args.rs  completions.rs  help.rs  mod.rs  output.rs  parser.rs  session.rs
src/commands/: mod.rs
src/commands/analysis/: analyze.rs  explain.rs  mod.rs  review_mr.rs  serena.rs
src/commands/config/: check.rs  edit.rs  init.rs  list.rs  maintain.rs  mod.rs  update_docs.rs
src/commands/dev/: debug.rs  feature.rs  fix.rs  mod.rs  optimize.rs  refactor.rs  research.rs  urgent.rs
src/commands/git/: branch.rs  commit.rs  merge_request.rs  mod.rs  status.rs
src/commands/lr/: check_file.rs  delete.rs  find.rs  mod.rs  new.rs  problems.rs  rebuild_index.rs  similar.rs  stats.rs  suggest.rs
src/commands/ops/: build.rs  deploy.rs  mod.rs
src/commands/quality/: format.rs  lint.rs  mod.rs  test.rs
src/commands/tech/: mod.rs  start.rs
src/commands/todo/: manage.rs  mod.rs
src/core/: auto_capture.rs  config.rs  error.rs  git_utils.rs  i18n.rs  learning_db.rs  learning_index.rs  learning_record_v2.rs  learning_record_v3.rs  mod.rs  project_config.rs  project_detector.rs  sanitizer.rs  security.rs  session_context.rs  session_recorder.rs  similarity.rs  stack_config.rs  tfidf.rs
src/i18n/: messages.json
tests/: cli.rs  e2e.rs  hierarchical_config_test.rs  integration.rs  perfect_operation_test.sh  security_tests.rs  security_vuln_fixes_test.rs
tests/cli_tests/: analysis_test.rs  completion_test.rs  config_commands_test.rs  help_test.rs  i18n_test.rs  version_test.rs
tests/e2e_tests/: dev_workflow_test.rs  feature_workflow_test.rs  git_workflow_test.rs  quality_workflow_test.rs
tests/integration_tests/: command_integration_test.rs  config_integration_test.rs  git_integration_test.rs  session_integration_test.rs
tests/performance/: command_execution_test.rs  config_load_test.rs  memory_usage_test.rs  startup_time_test.rs
tests/security/: command_injection_tests.rs  file_permissions_tests.rs  mod.rs  path_traversal_tests.rs
