[package]
name = "cldev"
version = "1.0.0"
edition = "2021"
rust-version = "1.70"
authors = ["Sanae Abe"]
description = "A unified CLI tool for managing multiple development tools with intelligent workflows, session recording, and AI-powered analysis"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sanae-abe/cldev"
homepage = "https://github.com/sanae-abe/cldev"
documentation = "https://docs.rs/cldev"
readme = "README.md"
keywords = ["cli", "development", "tools", "workflow", "productivity"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".github/",
    "tests/fixtures/",
    "benches/",
    "docs/examples/",
]

[[bin]]
name = "cldev"
path = "src/main.rs"

[lib]
name = "cldev"
path = "src/lib.rs"

[dependencies]
# CLI framework with derive macros and rich features
clap = { version = "4.5", features = ["derive", "cargo", "help", "usage", "error-context"] }

# Shell completion generation
clap_complete = "4.5"

# Serialization framework
serde = { version = "1.0", features = ["derive"] }

# TOML parser for configuration files
toml = "0.9"

# JSON support
serde_json = "1.0"

# SQLite database for learning index
rusqlite = { version = "0.31", features = ["bundled"] }

# String similarity for fuzzy search
strsim = "0.11"

# Regular expressions for text normalization
regex = "1.10"

# Error handling with context
anyhow = "1.0"

# Custom error types with derive macros
thiserror = "2.0"

# Cross-platform directory paths
dirs = "6.0"

# Terminal color support
colored = "3.0"

# Table formatting for CLI output
comfy-table = "7.1"

# Interactive prompts and dialogs
dialoguer = "0.12"

# Progress bars and spinners
indicatif = "0.18"

# Git repository operations
git2 = "0.20"

# Process execution and command spawning
which = "8.0"

# Date and time handling
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }

# YAML support for learning records
serde_yaml = "0.9"

# Lazy static initialization for regex patterns
lazy_static = "1.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
criterion = "0.7"
serial_test = "3.0"

[profile.release]
opt-level = "z"  # Optimize for size
lto = "fat"      # Full LTO for maximum size reduction
codegen-units = 1
strip = "symbols"  # Strip symbols and debug info
panic = "abort"

[profile.dev]
# Faster compilation during development
opt-level = 0
debug = true

[profile.test]
# Balance between compilation speed and test performance
opt-level = 1

[[bench]]
name = "config_bench"
harness = false

[[bench]]
name = "security_bench"
harness = false

[[bench]]
name = "i18n_bench"
harness = false

[[bench]]
name = "project_detector_bench"
harness = false
