[package]
name = "cldev"
version = "1.0.0"
edition = "2021"
rust-version = "1.70"
authors = ["Sanae Abe"]
description = "A unified CLI tool for managing multiple development tools with intelligent workflows, session recording, and AI-powered analysis"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sanae-abe/cldev"
homepage = "https://github.com/sanae-abe/cldev"
documentation = "https://docs.rs/cldev"
readme = "README.md"
keywords = ["cli", "development", "tools", "workflow", "productivity"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".github/",
    "tests/fixtures/",
    "benches/",
    "docs/examples/",
]

[[bin]]
name = "cldev"
path = "src/main.rs"

[lib]
name = "cldev"
path = "src/lib.rs"

[dependencies]
# CLI framework with derive macros and rich features
# Pin to 4.4.x for MSRV 1.70 compatibility (4.5.0+ requires Rust 1.74+)
clap = { version = "~4.4.0", features = ["derive", "cargo", "help", "usage", "error-context"] }

# Shell completion generation
# Match clap version for compatibility
clap_complete = "~4.4.0"

# Serialization framework
serde = { version = "1.0", features = ["derive"] }

# TOML parser for configuration files
# Use 0.8.x for MSRV 1.70 compatibility (0.9.x requires Rust 1.76+ via toml_datetime)
toml = "0.8"

# JSON support
serde_json = "1.0"

# SQLite database for learning index
rusqlite = { version = "0.31", features = ["bundled"] }

# String similarity for fuzzy search
strsim = "0.11"

# Regular expressions for text normalization
regex = "1.10"

# Error handling with context
anyhow = "1.0"

# Custom error types with derive macros
thiserror = "2.0"

# Cross-platform directory paths
dirs = "6.0"

# Terminal color support
# Pin to 2.1 for MSRV 1.70 compatibility (3.0+ requires Rust 1.80+)
colored = "2.1"

# Table formatting for CLI output
# Pin to 7.1.4 for MSRV 1.70 compatibility (7.2+ uses edition 2024)
comfy-table = "=7.1.4"

# Interactive prompts and dialogs
# Pin to 0.11 for MSRV 1.70 compatibility (0.12+ uses console 0.16 requiring 1.71+)
dialoguer = "0.11"

# Progress bars and spinners
# Pin to 0.17.8 for MSRV 1.70 compatibility (0.18.0+ uses console 0.16 requiring 1.71+)
indicatif = "=0.17.8"

# Git repository operations
git2 = "0.20"

# Process execution and command spawning
which = "8.0"

# Date and time handling
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }

# YAML support for learning records
serde_yaml = "0.9"

# Lazy static initialization for regex patterns
lazy_static = "1.4"

# Tar archive support for learning record archiving
tar = "0.4"

# Gzip compression for archives
flate2 = "1.0"

[dev-dependencies]
# Pin to 2.0.12 for MSRV 1.70 compatibility (2.0.13+ requires Rust 1.74+)
assert_cmd = "=2.0.12"
# Pin to 3.0 for MSRV 1.70 compatibility (3.1+ requires Rust 1.74+)
predicates = "~3.0"
tempfile = "3.10"
# Downgrade to 0.5 for MSRV 1.70 compatibility (0.7+ requires clap 4.5+)
criterion = "0.5"
serial_test = "3.0"

[profile.release]
opt-level = "z"  # Optimize for size
lto = "fat"      # Full LTO for maximum size reduction
codegen-units = 1
strip = "symbols"  # Strip symbols and debug info
panic = "abort"

[profile.dev]
# Faster compilation during development
opt-level = 0
debug = true

[profile.test]
# Balance between compilation speed and test performance
opt-level = 1

[[bench]]
name = "config_bench"
harness = false

[[bench]]
name = "security_bench"
harness = false

[[bench]]
name = "i18n_bench"
harness = false

[[bench]]
name = "project_detector_bench"
harness = false
