[package]
name = "cldev"
version = "1.0.0"
edition = "2021"
rust-version = "1.83"
authors = ["Sanae Abe"]
description = "A unified CLI tool for managing multiple development tools with intelligent workflows, session recording, and AI-powered analysis"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sanae-abe/cldev"
homepage = "https://github.com/sanae-abe/cldev"
documentation = "https://docs.rs/cldev"
readme = "README.md"
keywords = ["cli", "development", "tools", "workflow", "productivity"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".github/",
    "tests/fixtures/",
    "benches/",
    "docs/examples/",
]

[[bin]]
name = "cldev"
path = "src/main.rs"

[lib]
name = "cldev"
path = "src/lib.rs"

[dependencies]
# CLI framework with derive macros and rich features
# Pin to 4.4.x for MSRV 1.70 compatibility (4.5.0+ requires Rust 1.74+)
clap = { version = "~4.4.0", features = ["derive", "cargo", "help", "usage", "error-context"] }

# Shell completion generation
# Match clap version for compatibility
clap_complete = "~4.4.0"

# Serialization framework
serde = { version = "1.0", features = ["derive"] }

# TOML parser for configuration files
# Use 0.8.x for MSRV 1.70 compatibility (0.9.x requires Rust 1.76+ via toml_datetime)
toml = "0.8"

# JSON support
serde_json = "1.0"

# SQLite database for learning index
rusqlite = { version = "0.31", features = ["bundled"] }

# String similarity for fuzzy search
# Use 0.10 for compatibility with clap_builder (avoid duplicate versions)
strsim = "0.10"

# Regular expressions for text normalization
regex = "1.10"

# Error handling with context
anyhow = "1.0"

# Custom error types with derive macros
# Use 1.0 for compatibility with dialoguer (avoid duplicate versions)
thiserror = "1.0"

# Cross-platform directory paths
dirs = "6.0"

# Terminal color support
# Pin to 2.1 for MSRV 1.70 compatibility (3.0+ requires Rust 1.80+)
colored = "2.1"

# Table formatting for CLI output
# Pin to 7.1.4 for MSRV 1.70 compatibility (7.2+ uses edition 2024)
comfy-table = "=7.1.4"

# Interactive prompts and dialogs
# Pin to 0.11 for MSRV 1.70 compatibility (0.12+ uses console 0.16 requiring 1.71+)
dialoguer = "0.11"

# Progress bars and spinners
# Updated to 0.18.3 (MSRV 1.71, fixes unmaintained 'instant' dependency)
indicatif = "0.18"

# Git repository operations
git2 = "0.20"

# URL parsing (indirect dependency via git2)
# Use latest version to avoid RUSTSEC-2024-0421 (idna Punycode issue)
url = "2.5"

# Process execution and command spawning
which = "8.0"

# Date and time handling
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }

# YAML support for learning records
serde_yaml = "0.9"

# Lazy static initialization for regex patterns
lazy_static = "1.4"

# Tar archive support for learning record archiving
tar = "0.4"

# Gzip compression for archives
flate2 = "1.0"

[dev-dependencies]
# Pin to 2.0.12 for MSRV 1.70 compatibility (2.0.13+ requires Rust 1.74+)
assert_cmd = "=2.1.1"
# Pin to 3.0 for MSRV 1.70 compatibility (3.1+ requires Rust 1.74+)
predicates = "~3.1"
tempfile = "3.24"
# Downgrade to 0.5 for MSRV 1.70 compatibility (0.7+ requires clap 4.5+)
criterion = "0.5"
serial_test = "3.3"
# Pin bstr to 1.10.0 for MSRV 1.70 compatibility (1.11+ requires Rust 1.73+)
# This is a transitive dependency of assert_cmd but we pin it explicitly
bstr = "=1.10.0"
# Pin lock_api to 0.4.13 for MSRV 1.70 compatibility (0.4.14+ requires Rust 1.71+)
# This is a transitive dependency of parking_lot but we pin it explicitly
lock_api = "=0.4.13"
# Pin predicates-tree to 1.0.9 for MSRV 1.70 compatibility (1.0.10+ requires Rust 1.74+)
# This is a transitive dependency of assert_cmd but we pin it explicitly
predicates-tree = "=1.0.12"
# Pin predicates-core to 1.0.6 for MSRV 1.70 compatibility (1.0.7+ requires Rust 1.74+)
# This is a transitive dependency of predicates-tree but we pin it explicitly
predicates-core = "=1.0.9"
# Pin half for MSRV 1.71 compatibility (2.7.1+ requires Rust 1.81+)
# This is a transitive dependency of criterion but we pin it explicitly
half = "2.4"

[profile.release]
opt-level = "z"  # Optimize for size
lto = "fat"      # Full LTO for maximum size reduction
codegen-units = 1
strip = "symbols"  # Strip symbols and debug info
panic = "abort"

[profile.dev]
# Faster compilation during development
opt-level = 0
debug = true

[profile.test]
# Balance between compilation speed and test performance
opt-level = 1

[[bench]]
name = "config_bench"
harness = false

[[bench]]
name = "security_bench"
harness = false

[[bench]]
name = "i18n_bench"
harness = false

[[bench]]
name = "project_detector_bench"
harness = false
